// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.universe.db.postgres;

option go_package = "namespacelabs.dev/foundation/universe/db/postgres";

message DatabaseArgs {
    reserved 1, 2;
    string resource_ref = 3;
    int32  max_conns    = 4;  // Set if > 0.
}

message FactoryArgs {}